<?xml version="1.0"?>
<package>
  <name>libviconstream</name>
  <version>1.0.0</version>
  <description>
    A library for communicating with a Vicon Motion Capture System.
  </description>

  <maintainer email="emil.fresk@gmail.com">Emil Fresk</maintainer>
  <license>BSL-1.0</license>
  <author email="emil.fresk@gmail.com">Emil Fresk</author>
  <buildtool_depend>catkin</buildtool_depend>

</package>
